--- a/style.css
+++ b/style.css
@@ -57,11 +57,13 @@ body{
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+    padding: 10px 0;
 }
 
 h5, p{
     width: 100%;
     text-align: center;
+    margin-bottom: 0;
 }
 
 #storeHTML{
